# KalmanFilterWorkbench

./: CMakeLists.txt  DoubleSpinBox.qml  KFDelimiter.qml  KFDeviationGraph.qml  KFGraphNote.qml  KFHeightGraph.qml  README.md  d3.min.js  main.qml
src/: appmanager.cpp  appmanager.h  drawmanager.cpp  drawmanager.h  statemanager.cpp  statemanager.h
